--- a/index.html
+++ b/index.html
@@ -28,8 +28,21 @@
     <div id="menu">
 
         <main>
-
+            <div>
+                <img src="./assets/hamb-1.png" alt="Hamburguer1" class="w-28 "/>
+            </div>
         </main>
+
+        <div>
+            <p>Hamburguer Smash</p>
+            <p>Pão brioche, burger 160g, queijo prato e maionese da casa.</p>
+
+            <div>
+                <p>R$ 18.90</p>
+                <button>ADD</button>
+            </div>
+
+        </div>
 
     </div>
 
